--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
