--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
@@ -30,6 +30,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
