--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "prepare": "is-ci || husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
